--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "jean-dom-util",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Provides functionality for interaction with DOM elements",
   "main": "dist/jean-dom-util.js",
   "scripts": {
     "test": "open spec/spec-runner.html in browser"
   },
-  "keywords": [],
+  "keywords": ["DOM", "HTMLElement", "recursive", "searching"],
   "author": "Jeremias Andris",
   "license": "MIT",
   "dependencies": {
